# SerEngine

./: CMakeLists.txt  GameEngine.docx  README.md
SerEngineCore/: CMakeLists.txt
SerEngineCore/includes/SerEngineCore/: Application.h  Log.h
SerEngineCore/includes/SerEngineCore/Utils/: test.hpp
SerEngineCore/src/SerEngineCore/: Application.cpp
SerEngineCore/src/SerEngineCore/Utils/: test.cpp
SerEngineEditor/: CMakeLists.txt
SerEngineEditor/src/: main.cpp
